--- a/.env
+++ b/.env
@@ -10,15 +10,35 @@ mail_server="mail.example.com"
 email_address="cookies@example.com"
 email_password="cookiesonthelu"
 
-advisory_prefix="zerobooms-cert-"
-
-# Regex pattern for filename change input_country_here
-geo_csv_regex="^\\d{4}-\\d{2}-\\d{2}-(.*?)-input_country_here-geo_as\\d+\\.csv$"
-
-geo_csv_fallback_regex="^\\d{4}-\\d{2}-\\d{2}-(.*?)-\\d+-input_country_here-geo_as\\d+\\.csv$"
+advisory_prefix="default-cert-"
 
 #for rerence system
 reference_nomenclature="default-cert-stat-"
 
 #for CSIRT Name
-cert_name="default-cert"
+cert_name="DEFAULT-CERT"
+
+
+#-----REGEX SECTION----(change "<input_country_here>" to country name in lowercase. You can use find and replace "<input_country_here>" )
+# Regex pattern for filename 
+geo_csv_regex="^\\d{4}-\\d{2}-\\d{2}-(.*?)-<input_country_here>-geo_as\\d+\\.csv$"
+
+geo_csv_fallback_regex = "^\\d{4}-\\d{2}-\\d{2}-(.*?)(?:-\\d{3})?-<input_country_here>_as\\d+\\.csv$"
+
+#NEW FEATURE!!! DING DING DING CHICKEN DINNER!!
+#-------Special Detection In Case Of Issues----------- run just service flag to troubleshoot-----------
+# Anomaly patterns for Shadowserver consultation
+enable_anomaly_pattern_1="true"
+anomaly_pattern_1="^\d{4}-\d{2}-\d{2}-(\d+)_as\d+\.csv$"
+
+#detected government asn naming at prefix
+enable_anomaly_pattern_2="true"
+anomaly_pattern_2="^\d{4}-\d{2}-\d{2}-(.*?)-<input_country_here>[_-][a-z0-9\-]*_as\d+\.csv$"
+
+
+enable_anomaly_pattern_3="true"
+anomaly_pattern_3="^\d{4}-\d{2}-\d{2}-(.*?)-<input_country_here>-geo\.csv$"
+
+
+enable_anomaly_pattern_4="false"
+anomaly_pattern_4=""
