--- a/.env
+++ b/.env
@@ -31,11 +31,11 @@ geo_csv_fallback_regex = "^\\d{4}-\\d{2}-\\d{2}-(.*?)(?:-\\d{3})?-<input_country
 enable_anomaly_pattern_1="true"
 anomaly_pattern_1="^\d{4}-\d{2}-\d{2}-(\d+)_as\d+\.csv$"
 
-#detected government asn naming at prefix
+#Detected government asn naming at suffix
 enable_anomaly_pattern_2="true"
 anomaly_pattern_2="^\d{4}-\d{2}-\d{2}-(.*?)-<input_country_here>[_-][a-z0-9\-]*_as\d+\.csv$"
 
-
+#Ransomware Reports Service Sorting
 enable_anomaly_pattern_3="true"
 anomaly_pattern_3="^\d{4}-\d{2}-\d{2}-(.*?)-<input_country_here>-geo\.csv$"
 
