performance_configuation and imap folder selection

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ mongo_port=27017
 mail_server="mail.example.com"
 email_address="cookies@example.com"
 email_password="cookiesonthelu"
+imap_shadowserver_folder_or_email_processing_folder="INBOX"
 
 advisory_prefix="default-cert-"
 
@@ -18,6 +19,12 @@ reference_nomenclature="default-cert-stat-"
 #for CSIRT Name
 cert_name="DEFAULT-CERT"
 
+#====== Performance Settings ========
+buffer_size="1024"
+flush_row_count=100
+tracker_batch_size=1000
+service_sorting_batch_size=1000
+number_of_files_ingested_into_knowledgebase_per_batch= 2000
 
 #-----REGEX SECTION----(change "<input_country_here>" to country name in lowercase. You can use find and replace "<input_country_here>" )
 # Regex pattern for filename 
