--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ geo_csv_regex="^\\d{4}-\\d{2}-\\d{2}-(.*?)-<input_country_here>-geo_as\\d+\\.csv
 
 geo_csv_fallback_regex = "^\\d{4}-\\d{2}-\\d{2}-(.*?)(?:-\\d{3})?-<input_country_here>_as\\d+\\.csv$"
 
-#NEW FEATURE!!! DING DING DING CHICKEN DINNER!!
+# Feature Spotlight: Anomaly Pattern Detection Enabled
 #-------Special Detection In Case Of Issues----------- run just service flag to troubleshoot-----------
 # Anomaly patterns for Shadowserver consultation
 enable_anomaly_pattern_1="true"
