--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # MongoDB credentials
 mongo_username="anon"
 mongo_password="input password"
-mongo_auth_source="input auth source whethere 'admin'"
+mongo_auth_source="whether 'admin'"
 mongo_host="127.0.0.1"
 mongo_port=27017
 
