--- a/.env
+++ b/.env
@@ -11,12 +11,12 @@ email_address="cookies@example.com"
 email_password="cookiesonthelu"
 imap_shadowserver_folder_or_email_processing_folder="INBOX"
 
+
+# Advisory metadata (Future Plans)
 advisory_prefix="default-cert-"
 
-#for rerence system
+# Report metadata
 reference_nomenclature="default-cert-stat-"
-
-#for CSIRT Name
 cert_name="DEFAULT-CERT"
 
 #====== Performance Settings ========
@@ -26,13 +26,14 @@ tracker_batch_size=1000
 service_sorting_batch_size=1000
 number_of_files_ingested_into_knowledgebase_per_batch= 2000
 
-#-----REGEX SECTION----(change "<input_country_here>" to country name in lowercase. You can use find and replace "<input_country_here>" )
-# Regex pattern for filename 
+# ====== REGEX SECTION ======
+# Replace "<input_country_here>" with the country name in lowercase
 geo_csv_regex="^\\d{4}-\\d{2}-\\d{2}-(.*?)-<input_country_here>-geo_as\\d+\\.csv$"
 
 geo_csv_fallback_regex = "^\\d{4}-\\d{2}-\\d{2}-(.*?)(?:-\\d{3})?-<input_country_here>_as\\d+\\.csv$"
 
-# Feature Spotlight: Anomaly Pattern Detection Enabled
+# ====== Feature Spotlight: Anomaly Pattern Detection ======
+
 #-------Special Detection In Case Of Issues----------- run just service flag to troubleshoot-----------
 # Anomaly patterns for Shadowserver consultation
 enable_anomaly_pattern_1="true"
