--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ mongo_port=27017
 mail_server="mail.example.com"
 email_address="cookies@example.com"
 email_password="cookiesonthelu"
-imap_shadowserver_folder_or_email_processing_folder="INBOX"
+imap_shadowserver_folder_or_email_processing_folder="inbox"
 
 
 # Advisory metadata (Future Plans)
