--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ number_of_files_ingested_into_knowledgebase_per_batch= 2000
 # Replace "<input_country_here>" with the country name in lowercase
 geo_csv_regex="^\\d{4}-\\d{2}-\\d{2}-(.*?)-<input_country_here>-geo_as\\d+\\.csv$"
 
-geo_csv_fallback_regex = "^\\d{4}-\\d{2}-\\d{2}-(.*?)(?:-\\d{3})?-<input_country_here>_as\\d+\\.csv$"
+geo_csv_fallback_regex = "^\\d{4}-\\d{2}-\\d{2}-(.*?)(?:-\\d{3})?-<input_country_here>-geo_as\\d+\\.csv$"
 
 # ====== Feature Spotlight: Anomaly Pattern Detection ======
 
