--- a/.env
+++ b/.env
@@ -35,6 +35,10 @@ geo_csv_fallback_regex = "^\\d{4}-\\d{2}-\\d{2}-(.*?)(?:-\\d{3})?-<input_country
 # ====== Feature Spotlight: Anomaly Pattern Detection ======
 
 #-------Special Detection In Case Of Issues----------- run just service flag to troubleshoot-----------
+
+#Increase the number of anomaly pattern checks
+anomaly_pattern_count=5
+
 # Anomaly patterns for Shadowserver consultation
 enable_anomaly_pattern_1="true"
 anomaly_pattern_1="^\d{4}-\d{2}-\d{2}-(\d+)_as\d+\.csv$"
