--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,9 +1,16 @@
 title: Shadowserver CSIRT Toolkit
 description: Documentation and tools for automating Shadowserver reports
 theme: just-the-docs
-
-# Set base URL if using GitHub Pages under a repo (not a user site)
 baseurl: "/shadowserver_email_automation"
 
-# Enable sidebar navigation
 nav_sort: case_insensitive
+
+# Sidebar navigation
+nav:
+  - Home: index.md
+  - System Requirements: system-requirements.md
+  - Installation & Bootstrapping: installation-and-environment-bootstrapping.md
+  - Environment Configuration: environment-configuration.md
+  - Ingestion Usage & Flow: shadowserver-report-ingestion-usage-and-flow.md
+  - Metadata Scraper: shadowserver-report-metadata-scraper.md
+  - Organization-Based Generator: organization-based-shadowserver-report-generator.md
