--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,4 @@
+title: Navigation
 description: Documentation for automating Shadowserver reports received via email
 
 remote_theme: just-the-docs/just-the-docs
