--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # MongoDB credentials
 mongo_username="anon"
-mongo_password="input password"
-mongo_auth_source="whether 'admin'"
+mongo_password="sexaddict"
+mongo_auth_source="admin"
 mongo_host="127.0.0.1"
 mongo_port=27017
 
@@ -10,6 +10,13 @@ mail_server="mail.example.com"
 email_address="cookies@example.com"
 email_password="cookiesonthelu"
 imap_shadowserver_folder_or_email_processing_folder="inbox"
+
+#Microsoft Graph
+email_provider=graph
+graph_tenant_id=your-tenant-id
+graph_client_id=your-client-id
+graph_client_secret=your-client-secret
+graph_user_email=example@example.com  # email inbox to pull from
 
 
 # Advisory metadata (Future Plans)
