--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ email_provider=graph
 graph_tenant_id=your-tenant-id
 graph_client_id=your-client-id
 graph_client_secret=your-client-secret
-graph_user_email=example@example.com  # email inbox to pull from
+graph_user_email=example@example.com 
 
 
 # Advisory metadata (Future Plans)
