--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,6 @@
 # MongoDB credentials
 mongo_username="anon"
-mongo_password="sexaddict"
+mongo_password="input_password"
 mongo_auth_source="admin"
 mongo_host="127.0.0.1"
 mongo_port=27017
