--- a/.env_example
+++ b/.env_example
@@ -7,8 +7,8 @@ mongo_port=27017
 
 # Email settings
 mail_server="mail.example.com"
-email_address="cookies@example.com"
-email_password="cookiesonthelu"
+email_address="address@example.com"
+email_password="input password"
 imap_shadowserver_folder_or_email_processing_folder="inbox"
 
 #Microsoft Graph
