--- a/.env_example
+++ b/.env_example
@@ -12,11 +12,11 @@ email_password="input password"
 imap_shadowserver_folder_or_email_processing_folder="inbox"
 
 #Microsoft Graph
-email_provider=graph
-graph_tenant_id=your-tenant-id
-graph_client_id=your-client-id
-graph_client_secret=your-client-secret
-graph_user_email=example@example.com 
+email_provider="graph"
+graph_tenant_id="your-tenant-id"
+graph_client_id="your-client-id"
+graph_client_secret="your-client-secret"
+graph_user_email="address@example.com"
 
 
 # Advisory metadata (Future Plans)
